Исправлена ошибка в секции skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
-========================================================================== */
+       ========================================================================== */
 /**
-* 1. Correct the line height in all browsers.
-* 2. Prevent adjustments of font size after orientation changes in
-*    IE on Windows Phone and in iOS.
-*/
+     * 1. Correct the line height in all browsers.
+     * 2. Prevent adjustments of font size after orientation changes in
+     *    IE on Windows Phone and in iOS.
+     */
 html {
   line-height: 1.15;
   /* 1 */
@@ -16,17 +16,17 @@ html {
 }
 
 /* Sections
-========================================================================== */
+       ========================================================================== */
 /**
-* Remove the margin in all browsers (opinionated).
-*/
+     * Remove the margin in all browsers (opinionated).
+     */
 body {
   margin: 0;
 }
 
 /**
-* Add the correct display in IE 9-.
-*/
+     * Add the correct display in IE 9-.
+     */
 article,
 aside,
 footer,
@@ -37,38 +37,38 @@ section {
 }
 
 /**
-* Correct the font size and margin on `h1` elements within `section` and
-* `article` contexts in Chrome, Firefox, and Safari.
-*/
+     * Correct the font size and margin on `h1` elements within `section` and
+     * `article` contexts in Chrome, Firefox, and Safari.
+     */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
 /* Grouping content
-========================================================================== */
+       ========================================================================== */
 /**
-* Add the correct display in IE 9-.
-*/
+     * Add the correct display in IE 9-.
+     */
 figcaption,
 figure {
   display: block;
 }
 
 /**
-* Add the correct margin in IE 8.
-*/
+     * Add the correct margin in IE 8.
+     */
 figure {
   margin: 1em 40px;
 }
 
 /**
-* 1. Add the correct box sizing in Firefox.
-* 2. Show the overflow in Edge and IE.
-*/
+     * 1. Add the correct box sizing in Firefox.
+     * 2. Show the overflow in Edge and IE.
+     */
 hr {
   -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -77,16 +77,16 @@ hr {
 }
 
 /**
-* Add the correct display in IE.
-*/
+     * Add the correct display in IE.
+     */
 main {
   display: block;
 }
 
 /**
-* 1. Correct the inheritance and scaling of font size in all browsers.
-* 2. Correct the odd `em` font sizing in all browsers.
-*/
+     * 1. Correct the inheritance and scaling of font size in all browsers.
+     * 2. Correct the odd `em` font sizing in all browsers.
+     */
 pre {
   font-family: monospace, monospace;
   /* 1 */
@@ -95,11 +95,11 @@ pre {
 }
 
 /* Links
-========================================================================== */
+       ========================================================================== */
 /**
-* 1. Remove the gray background on active links in IE 10.
-* 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
-*/
+     * 1. Remove the gray background on active links in IE 10.
+     * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+     */
 a {
   background-color: transparent;
   /* 1 */
@@ -108,41 +108,41 @@ a {
 }
 
 /* Text-level semantics
-========================================================================== */
+       ========================================================================== */
 /**
-* 1. Remove the bottom border in Chrome 57- and Firefox 39-.
-* 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-*/
+     * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
+     * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+     */
 abbr[title] {
   border-bottom: none;
   /* 1 */
   text-decoration: underline;
   /* 2 */
   -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
 /**
-* Prevent the duplicate application of `bolder` by the next rule in Safari 6.
-*/
+     * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+     */
 b,
 strong {
   font-weight: inherit;
 }
 
 /**
-* Add the correct font weight in Chrome, Edge, and Safari.
-*/
+     * Add the correct font weight in Chrome, Edge, and Safari.
+     */
 b,
 strong {
   font-weight: bolder;
 }
 
 /**
-* 1. Correct the inheritance and scaling of font size in all browsers.
-* 2. Correct the odd `em` font sizing in all browsers.
-*/
+     * 1. Correct the inheritance and scaling of font size in all browsers.
+     * 2. Correct the odd `em` font sizing in all browsers.
+     */
 code,
 kbd,
 samp {
@@ -153,31 +153,31 @@ samp {
 }
 
 /**
-* Add the correct font style in Android 4.3-.
-*/
+     * Add the correct font style in Android 4.3-.
+     */
 dfn {
   font-style: italic;
 }
 
 /**
-* Add the correct background and color in IE 9-.
-*/
+     * Add the correct background and color in IE 9-.
+     */
 mark {
   background-color: #ff0;
   color: #000;
 }
 
 /**
-* Add the correct font size in all browsers.
-*/
+     * Add the correct font size in all browsers.
+     */
 small {
   font-size: 80%;
 }
 
 /**
-* Prevent `sub` and `sup` elements from affecting the line height in
-* all browsers.
-*/
+     * Prevent `sub` and `sup` elements from affecting the line height in
+     * all browsers.
+     */
 sub,
 sup {
   font-size: 75%;
@@ -195,43 +195,43 @@ sup {
 }
 
 /* Embedded content
-========================================================================== */
+       ========================================================================== */
 /**
-* Add the correct display in IE 9-.
-*/
+     * Add the correct display in IE 9-.
+     */
 audio,
 video {
   display: inline-block;
 }
 
 /**
-* Add the correct display in iOS 4-7.
-*/
+     * Add the correct display in iOS 4-7.
+     */
 audio:not([controls]) {
   display: none;
   height: 0;
 }
 
 /**
-* Remove the border on images inside links in IE 10-.
-*/
+     * Remove the border on images inside links in IE 10-.
+     */
 img {
   border-style: none;
 }
 
 /**
-* Hide the overflow in IE.
-*/
+     * Hide the overflow in IE.
+     */
 svg:not(:root) {
   overflow: hidden;
 }
 
 /* Forms
-========================================================================== */
+       ========================================================================== */
 /**
-* 1. Change the font styles in all browsers (opinionated).
-* 2. Remove the margin in Firefox and Safari.
-*/
+     * 1. Change the font styles in all browsers (opinionated).
+     * 2. Remove the margin in Firefox and Safari.
+     */
 button,
 input,
 optgroup,
@@ -248,16 +248,16 @@ textarea {
 }
 
 /**
-* Show the overflow in IE.
-*/
+     * Show the overflow in IE.
+     */
 button {
   overflow: visible;
 }
 
 /**
-* Remove the inheritance of text transform in Edge, Firefox, and IE.
-* 1. Remove the inheritance of text transform in Firefox.
-*/
+     * Remove the inheritance of text transform in Edge, Firefox, and IE.
+     * 1. Remove the inheritance of text transform in Firefox.
+     */
 button,
 select {
   /* 1 */
@@ -265,10 +265,10 @@ select {
 }
 
 /**
-* 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
-*    controls in Android 4.
-* 2. Correct the inability to style clickable types in iOS and Safari.
-*/
+     * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+     *    controls in Android 4.
+     * 2. Correct the inability to style clickable types in iOS and Safari.
+     */
 button,
 html [type="button"],
 [type="reset"],
@@ -277,7 +277,17 @@ html [type="button"],
   /* 2 */
 }
 
-
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  /**
+       * Remove the inner border and padding in Firefox.
+       */
+  /**
+       * Restore the focus styles unset by the previous rule.
+       */
+}
 
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
@@ -295,45 +305,45 @@ button:-moz-focusring,
 }
 
 /**
-* Show the overflow in Edge.
-*/
+     * Show the overflow in Edge.
+     */
 input {
   overflow: visible;
 }
 
 /**
-* 1. Add the correct box sizing in IE 10-.
-* 2. Remove the padding in IE 10-.
-*/
+     * 1. Add the correct box sizing in IE 10-.
+     * 2. Remove the padding in IE 10-.
+     */
 [type="checkbox"],
 [type="radio"] {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
 }
 
 /**
-* Correct the cursor style of increment and decrement buttons in Chrome.
-*/
+     * Correct the cursor style of increment and decrement buttons in Chrome.
+     */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
 /**
-* 1. Correct the odd appearance in Chrome and Safari.
-* 2. Correct the outline style in Safari.
-*/
+     * 1. Correct the odd appearance in Chrome and Safari.
+     * 2. Correct the outline style in Safari.
+     */
 [type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
   /* 2 */
   /**
-  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
-  */
+       * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+       */
 }
 
 [type="search"]::-webkit-search-cancel-button, [type="search"]::-webkit-search-decoration {
@@ -341,9 +351,9 @@ input {
 }
 
 /**
-* 1. Correct the inability to style clickable types in iOS and Safari.
-* 2. Change font properties to `inherit` in Safari.
-*/
+     * 1. Correct the inability to style clickable types in iOS and Safari.
+     * 2. Change font properties to `inherit` in Safari.
+     */
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
@@ -352,21 +362,21 @@ input {
 }
 
 /**
-* Correct the padding in Firefox.
-*/
+     * Correct the padding in Firefox.
+     */
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
 /**
-* 1. Correct the text wrapping in Edge and IE.
-* 2. Correct the color inheritance from `fieldset` elements in IE.
-* 3. Remove the padding so developers are not caught out when they zero out
-*    `fieldset` elements in all browsers.
-*/
+     * 1. Correct the text wrapping in Edge and IE.
+     * 2. Correct the color inheritance from `fieldset` elements in IE.
+     * 3. Remove the padding so developers are not caught out when they zero out
+     *    `fieldset` elements in all browsers.
+     */
 legend {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   display: table;
   /* 1 */
@@ -381,9 +391,9 @@ legend {
 }
 
 /**
-* 1. Add the correct display in IE 9-.
-* 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
-*/
+     * 1. Add the correct display in IE 9-.
+     * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+     */
 progress {
   display: inline-block;
   /* 1 */
@@ -392,56 +402,56 @@ progress {
 }
 
 /**
-* Remove the default vertical scrollbar in IE.
-*/
+     * Remove the default vertical scrollbar in IE.
+     */
 textarea {
   overflow: auto;
 }
 
 /* Interactive
-========================================================================== */
+       ========================================================================== */
 /*
-* Add the correct display in Edge, IE, and Firefox.
-*/
+     * Add the correct display in Edge, IE, and Firefox.
+     */
 details {
   display: block;
 }
 
 /*
-* Add the correct display in all browsers.
-*/
+     * Add the correct display in all browsers.
+     */
 summary {
   display: list-item;
 }
 
 /*
-* Add the correct display in IE 9-.
-*/
+     * Add the correct display in IE 9-.
+     */
 menu {
   display: block;
 }
 
 /* Scripting
-========================================================================== */
+       ========================================================================== */
 /**
-* Add the correct display in IE 9-.
-*/
+     * Add the correct display in IE 9-.
+     */
 canvas {
   display: inline-block;
 }
 
 /**
-* Add the correct display in IE.
-*/
+     * Add the correct display in IE.
+     */
 template {
   display: none;
 }
 
 /* Hidden
-========================================================================== */
+       ========================================================================== */
 /**
-* Add the correct display in IE 10-.
-*/
+     * Add the correct display in IE 10-.
+     */
 [hidden] {
   display: none;
 }
@@ -466,7 +476,7 @@ template {
 
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 div {
@@ -547,8 +557,8 @@ input {
   color: #ffffff;
   position: relative;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 100px 0;
 }
 
@@ -573,8 +583,8 @@ input {
 .header-menu__container {
   display: grid;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   grid-template-columns: auto 1fr;
   max-width: 1340px;
   margin: auto;
@@ -603,8 +613,8 @@ input {
   display: grid;
   position: relative;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   justify-items: end;
 }
 
@@ -618,8 +628,8 @@ input {
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 
 .header-navbar__btn-row {
@@ -632,8 +642,8 @@ input {
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
   opacity: 1;
   border-radius: 3px;
   background: #ffffff;
@@ -654,8 +664,8 @@ input {
 .header-navbar__btn--active span:nth-child(1) {
   top: 9px;
   -webkit-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  transform: rotate(135deg);
+      -ms-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
 
 .header-navbar__btn--active span:nth-child(2) {
@@ -666,8 +676,8 @@ input {
 .header-navbar__btn--active span:nth-child(3) {
   top: 9px;
   -webkit-transform: rotate(-135deg);
-  -ms-transform: rotate(-135deg);
-  transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+          transform: rotate(-135deg);
 }
 
 .header-navbar__list {
@@ -699,8 +709,8 @@ input {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header-content__buttons .btn:focus,
@@ -737,8 +747,8 @@ input {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .skills__button .btn-accent {
@@ -772,7 +782,7 @@ input {
 
 .skill-item {
   background-color: #2d3651;
-  min-height: calc(33.3333vh-13.3333px);
+  min-height: calc(33.3333vh - 13.3333px);
   position: relative;
   overflow: hidden;
 }
@@ -819,8 +829,8 @@ input {
 
 .skill-item:hover .skill-item__image {
   -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .skill-item:hover .skill-item__link {
@@ -857,16 +867,16 @@ input {
   height: 100%;
   padding: 20px;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 1.25rem;
   letter-spacing: 0.1em;
-  -webkit-transform: color 0.5s;
-  -ms-transform: color 0.5s;
-  transform: color 0.5s;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
 .skill-item__image {
@@ -897,8 +907,8 @@ input {
 .about__image {
   display: grid;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   justify-items: center;
 }
 
@@ -1055,8 +1065,8 @@ input {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .post-item {
@@ -1096,8 +1106,8 @@ input {
 
 .post-item:hover .post-item__image img {
   -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .post-item__image img {
@@ -1122,10 +1132,10 @@ input {
   display: flex;
   overflow: hidden;
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #2d3651;
 }
 
@@ -1137,13 +1147,13 @@ input {
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .post-item__caption {
   display: grid;
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
   padding: 20px;
 }
 
@@ -1175,8 +1185,8 @@ input {
   position: relative;
   display: grid;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 40px;
   grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
   grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
@@ -1268,8 +1278,8 @@ input {
   .header-navbar__list {
     display: grid;
     -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: end;
+        -ms-flex-pack: end;
+            justify-content: end;
     grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
     grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
     width: 100%;
@@ -1445,11 +1455,11 @@ input {
   .header-content__buttons {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .header-content__buttons .btn:first-of-type {
     margin-bottom: 20px;
