--- a/assets/scss/sections/_section-skills.scss
+++ b/assets/scss/sections/_section-skills.scss
@@ -89,7 +89,7 @@
 
 .skill-item {
     background-color:  $color-primary;
-    min-height: calc(33.3333vh-13.3333px);
+    min-height: calc(33.3333vh - 13.3333px);
     position: relative;
     overflow: hidden;
     
@@ -153,12 +153,13 @@
         display: flex;
         width: 100%;
         height: 100%;
+        
         padding: $gap;
         justify-content: center;
         align-items: center;
         font-size: 1.25rem;
         letter-spacing: 0.1em;
-        transform: color 0.5s;
+        transition: color 0.5s;
         
         @include md-sm {
             font-size: 1.125rem;
