--- a/assets/scss/header/_header-content.scss
+++ b/assets/scss/header/_header-content.scss
@@ -47,13 +47,20 @@
                 min-width: 200px;
                 height: 50px;
                 padding: 14px $gap;
+                font-size: 1rem;
                 
             }
-            @include md {
+            @include md-sm {
                 min-width: 170px;
                 height: 40px;
                 padding: 10px $gap;
-                
+                font-size: 1rem;
+            }
+            @include sm {
+                min-width: 170px;
+                height: 40px;
+                padding: 10px $gap;
+                font-size: 1rem;
             }
         }
     }
